testdata/golden/sema/invalid/arith_mixed_int_float.fmt
fn main() -> int {
    let _ = 1 + 0.1;
    return 0;
}
